--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "openai": "^4.28.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^9.0.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
